--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,32 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta charset="utf-8">
-	<title>Form</title>
-	<link rel="stylesheet" type="text/css" href="css/menu-bar-css.css" th:href="@{/css/menu-bar-css.css}">
+	<title>Index</title>
+	<div th:include="fragments/head :: head" th:remove="tag">Global Header</div>
 </head>
 <body style="font-family:Verdana;">
-<div class="Banner" style="background-color:#f1f1f1;padding:15px;">
-	<h1>Banner web</h1>
+<!--  Banner -->
+<div th:replace="fragments/banner :: .banner"> menu Bar</div>
+<!--  menu -->
+<div th:replace="fragments/menuBar :: menuBar('index')">menuBar</div>
+	<h2>index [[${#httpServletRequest.remoteUser}]]</h2>
 </div>
-<div style="overflow:auto">
-	<ul>
-		<li><a href="/form">Form</a></li>
-		<li><a href="/searchCase">Search Case</a></li>
-		<li><a href="#">Report</a></li>
-		<li style="float:right"><a href="/logout">[[${#httpServletRequest.remoteUser}]] [Logout]</a></li>
-	</ul><h2>index [[${#httpServletRequest.remoteUser}]]</h2>
-</div>
-<div style="background-color:#f1f1f1;text-align:center;padding:10px;margin-top:7px;font-size:12px;">
-	<div>
-		<h3> contact us </h3>
-		<div> Email : nattapoo@ais.co.th </div>
-		<div> phone : 02-2222222 </div>
-	</div>
-</div>
-<script>
-w3IncludeHTML();
-</script>
+<!--  footer -->
+<div th:replace="fragments/footer :: .footer"> menu Bar</div>
 </body>
 </html>
