--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,13 +3,34 @@
 <head>
 	<title>Index</title>
 	<div th:include="fragments/head :: head" th:remove="tag">Global Header</div>
+	<link rel="stylesheet" type="text/css" href="css/table-case-css.css" th:href="@{/css/table-case-css.css}">
 </head>
 <body style="font-family:Verdana;">
 <!--  Banner -->
 <div th:replace="fragments/banner :: .banner"> menu Bar</div>
 <!--  menu -->
 <div th:replace="fragments/menuBar :: menuBar('index')">menuBar</div>
-	<h2>index [[${#httpServletRequest.remoteUser}]]</h2>
+	<!-- <h2>index [[${#httpServletRequest.remoteUser}]]</h2> -->
+</div>
+<div class="container">
+	<h2>My Case </h2>
+	<h5 th:text="${#lists.size(caseList)+ 'ทั้งหมด'}">ทั้งหมด</h5>
+	<table id="table-case">
+		<tr>
+			<th>Project Id</th>
+			<th>Project Name</th>
+			<th>Contact</th>
+			<th>Status</th>
+			<!--<th>User</th>-->
+		</tr>
+		<tr th:each="case : ${caseList}">
+			<td><a th:text="${case.projectId}" th:href="${'/form/' + case.id}"></a></td>
+			<td><a th:text="${case.projectName}" th:href="${'/form/' + case.id}"></a></td>
+			<td><a th:text="${case.contact}" th:href="${'/form/' + case.id}"></a></td>
+			<td><a th:text="${case.statusRequest}" th:href="${'/form/' + case.id}"></a></td>
+			<!--<td><a th:text="${case.userWeb.username}" th:href="${'/form/edit/' + case.id}"></a></td>-->
+		</tr>
+	</table>
 </div>
 <!--  footer -->
 <div th:replace="fragments/footer :: .footer"> menu Bar</div>
